fix: proof validation and text overflowing (#97)

--- a/src/components/Home/components/ProofSlider/ProofSlider.module.css
+++ b/src/components/Home/components/ProofSlider/ProofSlider.module.css
@@ -2,17 +2,13 @@
 	width: 250px;
 }
 
-.sliderProof p:last-child {
-	font-size: large;
-}
-
 .sliderProof img {
 	width: 60px;
 	height: 60px;
 }
 
 .sliderProof > div {
-	height: 250px;
+	height: 270px;
 	box-shadow: none;
 }
 
